Upgrade Java from version 11 to 21 using OpenRewrite migration recipe